apps/uptime-kuma/templates/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptime-kuma
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`uptime.lachlan.io`)
      kind: Rule
      services:
        - name: uptime-kuma
          port: 3001
